syntax = "proto3";

option java_multiple_files = true;
option java_package = "shopping.cart.api.service.proto";

package shoppingcart;

// gRPC definition for ShoppingCartService

service ShoppingCartService {
  rpc AddItem (AddItemRequest)        returns (Cart) {}
  rpc RemoveItem (RemoveItemRequest)  returns (Cart) {}
  rpc AdjustItemQuantity (AdjustItemQuantityRequest)  returns (Cart) {}
  rpc Checkout (CheckoutCartRequest)  returns (Cart) {}
  rpc Get (GetCartRequest)            returns (Cart) {}
  rpc GetItemPopularity(GetItemPopularityRequest) returns (GetItemPopularityResponse) {}
}

message AddItemRequest {
  string cartId = 1;
  string itemId = 2;
  int32 quantity = 3;
}

message RemoveItemRequest {
  string cartId = 1;
  string itemId = 2;
}

message AdjustItemQuantityRequest {
  string cartId = 1;
  string itemId = 2;
  int32  quantity = 3;
}

message CheckoutCartRequest {
  string cartId = 1;
}

message GetCartRequest {
  string cartId = 1;
}

message Cart {
  repeated Item items = 1;
  bool checkedOut = 2;
}

message Item {
  string itemId = 1;
  int32 quantity = 2;
}

message GetItemPopularityRequest {
  string itemId = 1;
}

message GetItemPopularityResponse {
  string itemId = 1;
  int64 popularityCount = 2;
}